--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,16 @@ p {
     display: flex;
     flex-direction: column;
     background-color: #1A9BD8;
-    height: 90px;
+    height: 78px;
     padding-top: 7px;
     align-items: center;
     justify-content: center;
+}
+
+.form-top img {
+    margin-left: 70px;
+    margin-top: 16px;
+    z-index: 1;
 }
 
 .form-style {
@@ -127,13 +133,29 @@ p {
 
 .test-para {
     position: absolute;
-    top: 145px;
-    left: 48px;
+    top: 41px;
+    left: 70px;
+}
+
+.mobile-form-top {
+    display: none;
 }
 
 .test-para p {
     color: #ffffff;
     font-size: 22px;
+    position: relative;
+    display: inline-block;
+}
+
+.test-para p::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 1px;
+    width: 100%;
+    height: 1px;
+    background-color: #ffffff;
 }
 
 .banner-img {
@@ -234,7 +256,7 @@ p {
 
 .left-section, .right-section {
     background-color: #094376;
-    padding: 10px 20px;
+    padding: 5px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -253,7 +275,7 @@ p {
 .center-section .icon img{
     font-size: 24px;
     margin-right: 10px;
-    width: 80px;
+    width: 55px;
 }
 
 .center-section .text {
@@ -369,7 +391,11 @@ p {
 
 .find {
     font-size: 30px;
-    font-weight: normal;
+    font-weight: bold;
+}
+
+.faq-s ul {
+    padding-left: 16px;
 }
 
 .connect {
@@ -410,13 +436,14 @@ p {
 .footer-section {
     background-color: #e4f7ff;
     padding: 15px 0px;
+    margin-left: 20px;
 }
 
-.footer-content {
+/* .footer-content {
     position: relative;
     display: flex;
     justify-content: center;
-}
+} */
 
 .footer-logo {
     display: flex;
@@ -430,6 +457,7 @@ p {
 .footer-content {
     color: #6F7172;
     font-weight: 500;
+    margin-left: 20px;
 }
 
 .contact-details h5{
@@ -444,6 +472,7 @@ p {
 
 .celebration-image img {
     width: 50%;
+    margin-left: -12px;
 }
 
 .mobil-f-c {
@@ -455,7 +484,29 @@ p {
     font-weight: 500;
 }
 
+.mobile-banner-img {
+    display: none;
+}
+
+.img-white {
+    display: none;
+}
+
+.mobile {
+    display: none;
+}
+
+
+
 @media (max-width: 767px) {
+    .mobile {
+        display: block;
+    }
+
+    .desktop {
+        display: none;
+    }
+
     .logo-img {
         height: 47px;
     }
@@ -467,6 +518,106 @@ p {
     .celebrate {
         height: 53px;
     }
+
+    /* .hero-section {
+        padding-top: 25px;
+    } */
+
+    .no-padding {
+        padding-right: 0;
+        padding-left: 0;
+    }
+
+    .mobile-banner-img {
+        display: block !important;
+        margin-bottom: 10px
+    }
+
+    .mobile-banner-img img {
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+        box-sizing: border-box;
+    }
+
+    .form-style {
+        background-color: #ffffff;
+        margin-top: 14px;
+    }
+
+    .form-input-style { 
+        background-color: #ffffff !important;
+    }
+
+    .form-top-mobile {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        background-color: #1A9BD8;
+        height: 35px;
+    }
+
+    .form-top-mobile-content {
+        display: flex;
+        flex-direction: column;
+        padding: 3px;
+        background-color: #ffffff;
+        text-align: center;
+    }
+    .form-top-mobile h3 {
+        position: relative;
+        background: #E20515;
+        padding: 5px;
+        color: #ffffff;
+        font-weight: 800;
+    }
+
+    .form-top-mobile p {
+        color: #6F7172;
+        font-weight: 700;
+        position: relative;
+        display: inline-block;
+        margin: 0 auto;
+    }
+
+    .form-top-mobile p::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -2px;
+        width: 100%;
+        height: 2px;
+        background-color: black;
+    }
+
+    .discount-img {
+        position: relative;
+        z-index: 1;
+    }
+
+    .discount-img img{
+        width: 90px;
+    }
+    
+
+    .form-top { 
+        height: 30px;
+    }
+
+    .form-top img {
+        display: none;
+    }
+
+    .test-para {
+        display: none;
+    }
+
+    .mobile-form-top {
+        display: block;
+        position: relative;
+        z-index: 1;
+    }     
 
     .test-list {
         font-size: 12px;
@@ -481,7 +632,7 @@ p {
         line-height: 1.2
     }
 
-    .test-para {
+    /* .test-para {
         position: absolute;
         top: 118px;
         left: 38px;
@@ -490,13 +641,17 @@ p {
     .test-para p {
         color: #ffffff;
         font-size: 16px;
-    }
+    } */
 
     .test-detail p{
         color: #094376;
         font-weight: bold;
         display: flex;
         font-size: 15px;
+    }
+
+    .satisfy-c-section {
+        flex-direction: column;
     }
 
     .left-section, .right-section { 
@@ -508,13 +663,93 @@ p {
         border-radius: 0px !important;
     }
 
+    .c-satisfy .center-c { 
+        justify-content: flex-start;
+    }
+
+    .c-satisfy {
+        background: #094376;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        position: absolute;
+        right: 0;
+        width: calc(100% - 20px);
+    }
+
+    .satify-customer-banner-m {
+        background-color: #1A9BD8;
+        padding-top: 20px;
+        height: auto;
+    }
+
+    .msc {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .satify-text {
+        display: flex;
+        align-items: center;
+        background-color: #094376;
+        width: calc(100% - 20px);
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+    }
+
+    .satify-text h4 {
+        font-size: 22px;
+        position: relative;
+        display: inline-block;
+    }
+
+    .satify-text h4::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 1px;
+        width: 100%;
+        height: 1px;
+        background-color: #ffffff;
+    }
+
+    .m-stars {
+        position: relative;
+    }
+
+    .m-stars img {
+        width: 40%;
+        margin-top: -14px;
+    }
+
+    .img-blue {
+        display: none;
+    }
+
+    .img-white {
+        display: block;
+        width: 50px;
+    }
+
+    .m-satisfy-c-img {
+        width: 40%;
+    }
+
+    .m-star-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .m-star-img img {
+        width: 200px;
+    }
+
     .center-section .icon img {
         margin-right: 0px !important;
         width: 60px;
     }
 
     .center-section .text {
-        font-size: 20px !important;
+        font-size: 22px !important;
     }
 
     .center-find {
@@ -527,7 +762,6 @@ p {
 
     .find {
         font-size: 28px;
-        font-weight: normal;
     }
 
     .connect {
@@ -537,6 +771,11 @@ p {
 
     .connect img {
         width: 30px;
+    }
+
+    .footer-section {
+        margin-left: 0px !important;
+        /* background-color: #ffffff; */
     }
 
     .footer-logo-c img {
@@ -555,6 +794,18 @@ p {
 
     .celebration-image img {
         width: 75%;
+    }
+
+    .footer-logo-c img {
+        margin-right: auto;
+        margin-left: auto;
+        display: block;
+    }
+
+    .celebration-image img {
+        margin-right: auto;
+        margin-left: auto;
+        display: block;
     }
 }
 
@@ -579,6 +830,6 @@ p {
 @media (min-width: 1355px) {
     .test-para p {
         color: #ffffff;
-        font-size: 18px;
+        font-size: 22px;
     }
 }
